@@ -25,6 +25,8 @@ This version addresses the following issues:
 1014016 - Stencil Plane Operation test failed.
 1014017 - Stencil Plane Function test failed.
 1015029 - Linear fog efficiency
+1008788	- Auto mipmap generation
+1008786 - Buffer Objects
 
 
 Version 0.81
